--- a/Portfolio Project/index.html
+++ b/Portfolio Project/index.html
@@ -18,8 +18,7 @@
         <div class="profile-info">
           <h2 class="name">Adonis Pierre BIGIRIMANA</h2>
           <p>
-            Originally from Burundi and a part Cameroon, I have spent a
-            significant part of my life diffrent places but current in Nairobi.
+            I have spent a significant part of my life in diffrent places but current in Nairobi.
             I am a 20-year-old man with a strong passion for science,
             specializing in Biology, and I’m also deeply interested in sports
             and the way the human body works.
