--- a/Portfolio Project/index.html
+++ b/Portfolio Project/index.html
@@ -18,10 +18,11 @@
         <div class="profile-info">
           <h2 class="name">Adonis Pierre BIGIRIMANA</h2>
           <p>
-            I have spent a significant part of my life in diffrent places but current in Nairobi.
-            I am a 20-year-old man with a strong passion for science,
-            specializing in Biology, and I’m also deeply interested in sports
-            and the way the human body works.
+            I have spent a significant part of my life in diffrent places,
+            fluent in many languages and finished in an french school, current
+            in Nairobi. I am a 20-year-old man with a strong passion for
+            science, specializing in Biology, and I’m also deeply interested in
+            sports and the way the human body works.
           </p>
           <p>
             Currently, I am an active athlete in Nairobi. I play basketball,
@@ -80,7 +81,7 @@
       <h3>Non-Technical Skills</h3>
       <ul>
         <li>
-          Strong teamwork and collaboration (from sports and choir experience
+          Strong teamwork and collaboration (from sports and choir experience)
         </li>
         <li>
           Communication skills (public speaking, singing, and group
